<resources>
    <string name="app_name">Tutor App</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Name">Name</string>
    <string name="save_event">Save Event</string>
    <string name="invalid_user">Invalid Username</string>

    <!-- fragment_account(account) strings here -->
    <string name="account_sessions_button">Sessions</string>
    <string name="account_assignments_button">Assignments</string>
    <string name="account_availability_button">Availability</string>
    <string name="account_personal_information_button">Personal Information</string>
    <string name="account_create_session_button">Create A Session</string>
    <string name="account_profile_picture_desc">Tutor Profile Picture</string>
    <string name="account_grade_text">Grade Level: 11, 12</string>
    <string name="account_subjects_text">Subject(s): Math, English</string>
    <!-- .......................... -->

    <!-- fragment_student_profile(student account) strings here -->
    <string name ="student_grade_text">Grade: 2</string>
    <string name="student_subjects_text">Subject(s): Music, Science</string>
    <!-- .......................... -->

    <!-- fragment_calendar(calendar) strings here -->
    <string name="calendar_name_hint">Enter your name</string>
    <string name="calendar_sessions_title">Sessions</string>
    <!-- .......................... -->

    <!-- fragment_create_session(create session) strings here -->
    <string name="create_session_select_subjects_text">Select Subject(s)</string>
    <string name="create_session_select_grades_text">Select Grades(s)</string>
    <string name="create_session_select_date_text">Select Date</string>
    <string name="create_session_select_time_text">Select Time</string>
    <string name="create_session_cancel_text">Cancel</string>
    <string name="create_session_text">Create Session</string>
    <string name="create_session_number_of_participants_text">Enter The Number Of Participants</string>
    <string name="create_session_start_time">Select Start Time</string>
    <string name="create_session_end_time">Select End Time</string>
    <string name="create_session_cancel">Cancel</string>
    <string name="create_session_button">Create Session</string>
    <string name="create_session_number_of_participants_hint">Enter Count</string>
    <!-- .......................... -->

    <!-- fragment_home_page(homepage) strings here -->
    <!-- .......................... -->

    <!-- fragment_login(login) strings here -->
    <string name="login_button">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_default_picture">Placeholder Picture</string>
    <string name="login_no_account_text">Don\'t have an account?</string>
    <string name="login_signup_text">Sign Up!</string>
    <!-- .......................... -->

    <!-- fragment_signup(register page) strings here -->
    <string name="register_button">Register</string>
    <string name="register_firstname_hint">First Name</string>
    <string name="register_lastname_hint">Last Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_title">REGISTER</string>
    <string name="register_tutor_button">Are you a tutor?</string>
    <string name="register_account_exists_text">Already have an account?</string>
    <string name="register_login_text">Login!</string>
    <!-- .......................... -->

    <!-- fragment_signup_additional_info(tutor info) strings here -->
    <string name="additional_info_title">Please enter your information below</string>
    <string name="additional_info_grade_levels_label">Grade Levels</string>
    <string name="additional_info_subjects_label">Subject(s)</string>
    <string name="additional_info_phone_number_label">Phone Number</string>
    <string name="additional_info_phone_number_hint">Enter Phone Number</string>
    <string name="additional_info_contact_method_label">Preferred Contact Method</string>
    <string name="additional_info_contact_method_email">Email</string>
    <string name="additional_info_contact_method_phone">Phone</string>
    <string name="additional_info_preferred_times_label">Preferred Times</string>
    <string name="additional_info_upload_resume_label">Upload A Resume</string>
    <string name="additional_info_upload_resume_button">Upload Resume</string>
    <string name="additional_info_register_button">Register</string>
    <string name="additional_info_back_button">Back</string>
    <string name="personal_information">Personal Information</string>
    <string name="availability">Availability</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_tutor">Search for tutor</string>
    <string name="book_session">Book Session</string>
    <string name="logout">Logout</string>
    <!-- .......................... -->
</resources>