<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/selectSubjectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="258dp"
        android:text="@string/create_session_select_subjects_text"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/selectedSubjectsChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectSubjectLabel"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white">
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/selectGradesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectedSubjectsChipGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="260dp"
        android:text="@string/create_session_select_grades_text"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/selectedGradesChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectGradesLabel"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white">
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/selectDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectedGradesChipGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="301dp"
        android:text="@string/create_session_select_date_text"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectDateLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        android:headerBackground="@color/blue"
        android:headerDayOfMonthTextAppearance="@color/white"
        android:headerMonthTextAppearance="@color/white"
        android:yearListItemTextAppearance="@color/white"
        android:yearListSelectorColor="@color/blue"
        android:dayOfWeekBackground="@color/white"
        android:dayOfWeekTextAppearance="@color/white"
        android:headerYearTextAppearance="@color/white"
        android:calendarTextColor="@color/black"/>


    <TextView
        android:id="@+id/selectTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_session_select_time_text"
        android:textSize="18sp"
        android:layout_below="@id/datePicker"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/selectStartTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_session_start_time"
        android:layout_below="@id/selectTimeLabel"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/selectEndTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_session_end_time"
        android:layout_below="@id/selectStartTimeButton"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/participantsCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_session_number_of_participants_text"
        android:textSize="18sp"
        android:layout_below="@id/selectEndTimeButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/black"/>


    <EditText
        android:id="@+id/participantsCountEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/participantsCountLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="number"
        android:hint="@string/create_session_number_of_participants_hint"
        android:inputType="number"
        android:textColorHint="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/participantsCountEditText"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.5"
            android:text="@string/create_session_cancel"
            android:backgroundTint="@color/blue"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle"/> <!-- remove this line if we want borderless buttons -->

        <Button
            android:id="@+id/createSessionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.1"
            android:text="@string/create_session_button"
            android:backgroundTint="@color/blue"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle"/> <!-- remove this line if we want borderless buttons -->
    </LinearLayout>

</RelativeLayout>
</ScrollView>